1999-09-14 John R. Jackson  <jrj@purdue.edu>

	* configure.in: Add --with-tmpdir to ./configure and use it for
	  all Amanda temporary files.  Default --with-dbgdir to --with-tmpdir.
	  Move libexec/getconf to sbin/amgetconf and add an optional
	  config parameter.  Add optional config parameter to several
	  other programs.
	  Add debugging to chg-chio.
	  Call new safe_cd() function in most programs to cd to --with-tmpdir
	  so if they drop core, it goes to a known spot.  Rename existing
	  core files so more than one failure may be tracked.  Remove most
	  chdir() and umask() calls (umask is set in safe_cd).
	* amplot/amplot.sh.in: ditto.
	* changer-src/chg-chio.pl.in: ditto.
	* changer-src/chg-chs.sh.in: ditto.
	* changer-src/chg-manual.sh.in: ditto.
	* changer-src/chg-mtx.sh.in: ditto.
	* changer-src/chg-multi.sh.in: ditto.
	* changer-src/chg-rth.pl.in: ditto.
	* changer-src/chg-scsi-chio.c: ditto.
	* changer-src/chg-scsi.c: ditto.
	* changer-src/chg-zd-mtx.sh.in: ditto.
	* client-src/amandad.c: ditto.
	* client-src/calcsize.c: ditto.
	* client-src/killpgrp.c: ditto.
	* client-src/rundump.c: ditto.
	* client-src/runtar.c: ditto.
	* client-src/selfcheck.c: ditto.
	* client-src/sendbackup-gnutar.c: ditto.
	* client-src/sendbackup.c: ditto.
	* client-src/sendsize.c: ditto.
	* common-src/alloc.c: ditto.
	* common-src/amanda.h: ditto.
	* common-src/amflock.c: ditto.
	* common-src/bsd-security.c: ditto.
	* common-src/debug.c: ditto.
	* common-src/file.c: ditto.
	* common-src/genversion.c: ditto.
	* restore-src/amidxtaped.c: ditto.
	* server-src/Makefile.am: ditto.
	* server-src/amadmin.c: ditto.
	* server-src/amcheck.c: ditto.
	* server-src/amcheckdb.sh.in: ditto.
	* server-src/amcleanup.sh.in: ditto.
	* server-src/amcleanupdisk.c: ditto.
	* server-src/amdump.sh.in: ditto.
	* server-src/amflush.c: ditto.
	* server-src/amfreetapes.sh.in: ditto.
	* server-src/amindex.c: ditto.
	* server-src/amindex.h: ditto.
	* server-src/amindexd.c: ditto.